# vk_rs

./: Cargo.toml  compile_shader.py  readme.md
examples/quad/: Cargo.toml
examples/quad/src/: main.rs
examples/scene/: Cargo.toml
examples/scene/src/: main.rs
examples/scene/src/renderer/: mod.rs  model_renderer.rs
examples/texture/: Cargo.toml
examples/texture/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
libs/enviroment/: Cargo.toml
libs/enviroment/src/: brdf.rs  cubemap.rs  irradiance.rs  lib.rs  pre_filtered.rs
libs/gltf_model/: Cargo.toml
libs/gltf_model/src/: skin.rs
libs/math/: Cargo.toml
libs/model/: Cargo.toml
libs/model/src/: lib.rs  mesh.rs  texture.rs  vertex.rs
libs/util/: Cargo.toml
libs/util/src/: lib.rs
libs/vks/: Cargo.toml
libs/vks/src/: base.rs  controls.rs  debug.rs  defered.rs  gui.rs  image.rs  in_flight_frames.rs  lib.rs  pipeline.rs  shader.rs  swapchain.rs  util.rs
libs/vks/src/context/: shared.rs
libs/vks/src/model/: mesh.rs  mikktspace.rs  mod.rs  texture.rs  vertex.rs
shader/texture/: texture.frag  texture.vert
src/: base.rs  camera.rs  lib.rs  main.rs  structures.rs  util.rs
src/structures/: texture.rs
src/util/: buffer.rs  command_buffer.rs  debug.rs  descriptor.rs  device.rs  fps_limiter.rs  framebuffer.rs  image.rs  instance.rs  pipeline.rs  sampler.rs  surface.rs  swapchain.rs  sync.rs
