[package]
name = "defered"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vks.workspace = true
math.workspace = true
util.workspace = true

ash.workspace = true
winit.workspace = true
tracing.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
tracing-subscriber.workspace = true
