[package]
name = "triangle"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vks.workspace = true
math.workspace = true
util.workspace = true

ash.workspace = true
winit.workspace = true
log.workspace = true
env_logger.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
