[package]
name = "gltf_model"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
tracing.workspace = true
vks.workspace = true
mikktspace.workspace = true
cgmath.workspace = true
math.workspace = true

[dependencies.gltf]
workspace = true
features = [
    "KHR_lights_punctual",
    "KHR_materials_unlit",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_emissive_strength",
    "KHR_materials_clearcoat",
    "KHR_texture_transform",
    "KHR_materials_ior",
]
