[package]
name = "vks"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
ash.workspace = true
ash-window.workspace = true
raw-window-handle.workspace = true
winit.workspace = true
math.workspace = true
egui.workspace = true
egui-winit.workspace = true



byteorder.workspace = true

